--- a/trunk/MaxisGetIt/AndroidManifest.xml
+++ b/trunk/MaxisGetIt/AndroidManifest.xml
@@ -191,7 +191,7 @@
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
-        </activity>
+        </activity>
         -->
         <activity
             android:name="com.kelltontech.maxisgetit.ui.activities.ClassifiedScrollActivity"
@@ -346,6 +346,11 @@
         <activity
             android:name="com.kelltontech.maxisgetit.ui.activities.GetItInfoActivity"
             android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.kelltontech.maxisgetit.ui.activities.DealsActivity"
+          android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black.NoTitleBar">
         </activity>
     </application>
