--- a/MaxisGetIt/AndroidManifest.xml
+++ b/MaxisGetIt/AndroidManifest.xml
@@ -191,7 +191,7 @@
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
-        </activity>
+        </activity>
         -->
         <activity
             android:name="com.kelltontech.maxisgetit.ui.activities.ClassifiedScrollActivity"
@@ -365,11 +365,19 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black.NoTitleBar" >
         </activity>
-         <activity
+        <activity
             android:name="com.kelltontech.maxisgetit.ui.activities.SaleTemplateTypeActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.kelltontech.maxisgetit.ui.activities.AdvanceSelectCity"
+            android:label="@string/title_activity_advance_select_city" >
+        </activity>
+        <activity
+            android:name="com.kelltontech.maxisgetit.CitySelectorActivity"
+            android:label="@string/title_activity_city_selector" >
         </activity>
     </application>
 
