Add New POI functionality implemented in the Contest App.

--- a/MaxisGetIt/AndroidManifest.xml
+++ b/MaxisGetIt/AndroidManifest.xml
@@ -299,6 +299,13 @@
             android:theme="@android:style/Theme.Black.NoTitleBar" >
         </activity>
         <activity
+            android:name="com.kelltontech.maxisgetit.ui.activities.ContestAddNewPoiActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
+        <activity
             android:name="com.kelltontech.maxisgetit.ui.activities.ContestUploadImageActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
@@ -370,14 +377,6 @@
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
-        </activity>
-        <activity
-            android:name="com.kelltontech.maxisgetit.ui.activities.AdvanceSelectCity"
-            android:label="@string/title_activity_advance_select_city" >
-        </activity>
-        <activity
-            android:name="com.kelltontech.maxisgetit.CitySelectorActivity"
-            android:label="@string/title_activity_city_selector" >
         </activity>
     </application>
 
