--- a/MaxisGetIt/AndroidManifest.xml
+++ b/MaxisGetIt/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kelltontech.maxisgetit"
-    android:versionCode="3"
-    android:versionName="1.2" >
+    android:versionCode="5"
+    android:versionName="1.22" >
 
-    <!-- Package should be com.findit333 -->
-    <!-- Current version code/name on play: code:2, name:1.1 -->
+    <!--above version are updated 
+    Package should be com.findit333 -->
+    <!-- Current version code/name on play: code:4, name:1.21 -->
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -191,7 +192,7 @@
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
-        </activity>
+        </activity>
         -->
         <activity
             android:name="com.kelltontech.maxisgetit.ui.activities.ClassifiedScrollActivity"
@@ -375,6 +376,17 @@
         <activity
             android:name="com.kelltontech.maxisgetit.ui.activities.SaleTemplateTypeActivity"
             android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.kelltontech.maxisgetit.ui.activities.AdvanceSelectCity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.kelltontech.maxisgetit.ui.activities.AdvanceSelectLocalityActivity"
+            android:label="@string/title_activity_advance_select_locality" 
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
