--- a/trunk/MaxisGetIt/AndroidManifest.xml
+++ b/trunk/MaxisGetIt/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <!--
     above version are updated 
-    Package should be com.findit333
+    Package should be com.findit333
     -->
     <!-- Current version code/name on play: code:6, name:1.23 -->
 
@@ -196,7 +196,7 @@
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
-        </activity>
+        </activity>
         -->
         <activity
             android:name="com.kelltontech.maxisgetit.ui.activities.ClassifiedScrollActivity"
@@ -413,8 +413,12 @@
         <activity
             android:name="com.kelltontech.maxisgetit.ui.activities.RefineOutletActivity"
             android:label="@string/title_activity_refine_outlet"
-             android:screenOrientation="portrait"
+            android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.kelltontech.maxisgetit.ui.activities.DidLifeCycleActivity"
+            android:label="@string/title_activity_did_life_cycle" >
         </activity>
     </application>
 
