--- a/MaxisGetIt/AndroidManifest.xml
+++ b/MaxisGetIt/AndroidManifest.xml
@@ -6,8 +6,7 @@
 
     <!--
     above version are updated 
-    Package should be com.findit333
-    -->
+    Package should be com.findit333    -->
     <!-- Current version code/name on play: code:6, name:1.23 -->
 
     <uses-sdk
@@ -196,7 +195,7 @@
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
-        </activity>
+        </activity>
         -->
         <activity
             android:name="com.kelltontech.maxisgetit.ui.activities.ClassifiedScrollActivity"
@@ -418,14 +417,24 @@
         </activity>
         <activity
             android:name="com.kelltontech.maxisgetit.ui.activities.DidLifeCycleActivity"
-            android:label="@string/title_activity_did_life_cycle" 
-             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Light.NoTitleBar">
+            android:label="@string/title_activity_did_life_cycle"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
         <activity
             android:name="com.kelltontech.maxisgetit.ui.activities.CompanyOrCategoryFilterActivity"
             android:label="@string/title_activity_company_or_category_filter"
-             android:screenOrientation="portrait"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.kelltontech.maxisgetit.ui.activities.LifeCycleViewActivity"
+            android:configChanges="orientation|keyboard|keyboardHidden|screenLayout|screenSize"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.kelltontech.maxisgetit.ui.activities.PhotoSlideActivity"
+            android:configChanges="orientation|keyboard|keyboardHidden|screenLayout|screenSize"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
     </application>
