--- a/branch/Staging_Hot_Deals_29-Jan-2014/MaxisGetIt/project.properties
+++ b/branch/Staging_Hot_Deals_29-Jan-2014/MaxisGetIt/project.properties
@@ -11,7 +11,7 @@
 # proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=Google Inc.:Google APIs:8
+target=android-8
 android.library=false
 android.library.reference.1=..\\library-projects\\google-play-services_lib
 android.library.reference.2=../library
