--- a/MaxisGetIt/AndroidManifest.xml
+++ b/MaxisGetIt/AndroidManifest.xml
@@ -50,7 +50,7 @@
     <application
         android:name="com.kelltontech.framework.db.MyApplication"
         android:allowBackup="true"
-        android:debuggable="true"
+        android:debuggable="false"
         android:hardwareAccelerated="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
