--- a/trunk/MaxisGetIt/AndroidManifest.xml
+++ b/trunk/MaxisGetIt/AndroidManifest.xml
@@ -50,7 +50,7 @@
     <application
         android:name="com.kelltontech.framework.db.MyApplication"
         android:allowBackup="true"
-        android:debuggable="true"
+        android:debuggable="false"
         android:hardwareAccelerated="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
@@ -195,8 +195,7 @@
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
-        </activity>
-        -->
+        </activity>   -->
         <activity
             android:name="com.kelltontech.maxisgetit.ui.activities.ClassifiedScrollActivity"
             android:configChanges="orientation|keyboardHidden"
