--- a/trunk/MaxisGetIt/AndroidManifest.xml
+++ b/trunk/MaxisGetIt/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kelltontech.maxisgetit"
-    android:versionCode="9"
-    android:versionName="1.26" >
+    android:versionCode="10"
+    android:versionName="1.27" >
 
     <!--
     above version are updated 
-    Package should be com.findit333
+    Package should be com.findit333
     -->
-    <!-- Current version code/name on play store as on 23-June-2014: code:8, name:1.25 -->
+    <!-- Current version code/name on play store as on 25-June-2014: code:9, name:1.26 -->
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -43,6 +43,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!-- <uses-permission android:name="android.permission.SET_DEBUG_APP"/> -->
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -51,7 +52,7 @@
     <application
         android:name="com.kelltontech.framework.db.MyApplication"
         android:allowBackup="true"
-        android:debuggable="false"
+        android:debuggable="true"
         android:hardwareAccelerated="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
