--- a/branch/B-3.0.55.0_1.0.1_(NewSearchImplementation)_Date_11-Jul-2014/MaxisGetIt/AndroidManifest.xml
+++ b/branch/B-3.0.55.0_1.0.1_(NewSearchImplementation)_Date_11-Jul-2014/MaxisGetIt/AndroidManifest.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kelltontech.maxisgetit"
-    android:versionCode="10"
-    android:versionName="1.27" >
+    android:versionCode="11"
+    android:versionName="1.28" >
 
-    <!--
-    above version are updated 
-    Package should be com.findit333
-    -->
-    <!-- Current version code/name on play store as on 25-June-2014: code:9, name:1.26 -->
+    <!-- above version are updated | Package should be com.findit333 -->
+    <!-- Current version code/name on play store as on 23-Jul-2014: code:10, name:1.27 -->
+    <!-- Previous version code/name on play store as on 25-June-2014: code:9, name:1.26 -->
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -52,7 +50,7 @@
     <application
         android:name="com.kelltontech.framework.db.MyApplication"
         android:allowBackup="true"
-        android:debuggable="true"
+        android:debuggable="false"
         android:hardwareAccelerated="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
@@ -85,7 +83,7 @@
             <intent-filter>
                 <action android:name="com.android.vending.INSTALL_REFERRER" />
             </intent-filter>
-        </receiver>
+        </receiver>
         -->
 
         <activity android:name="com.paypal.android.sdk.payments.PaymentActivity" />
@@ -220,7 +218,7 @@
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
-        </activity>
+        </activity>
         -->
         <activity
             android:name="com.kelltontech.maxisgetit.ui.activities.ClassifiedScrollActivity"
@@ -461,6 +459,12 @@
             android:name="com.kelltontech.maxisgetit.ui.activities.PhotoSlideActivity"
             android:configChanges="orientation|keyboard|keyboardHidden|screenLayout|screenSize"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.kelltontech.maxisgetit.ui.activities.SearchCriteriaChooserActivity"
+            android:label="@string/title_activity_search_criteria_chooser"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.SemiTransparent" >
         </activity>
     </application>
 
