--- a/branch/B-3.0.55.0_1.0.1_(NewSearchImplementation)_Date_11-Jul-2014/MaxisGetIt/AndroidManifest.xml
+++ b/branch/B-3.0.55.0_1.0.1_(NewSearchImplementation)_Date_11-Jul-2014/MaxisGetIt/AndroidManifest.xml
@@ -50,7 +50,7 @@
     <application
         android:name="com.kelltontech.framework.db.MyApplication"
         android:allowBackup="true"
-        android:debuggable="false"
+        android:debuggable="true"
         android:hardwareAccelerated="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
